gitea/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: postgresql
          image: postgres:12
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready --host $POD_IP
            initialDelaySeconds: 120
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready --host $POD_IP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 5
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
        - name: gitea
          image: webhippie/gitea:latest
          ports:
            - name: ssh
              containerPort: 2222
            - name: http
              containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: gitea-data
              mountPath: /var/lib/gitea
            - name: gitea-logs
              mountPath: /var/log/gitea
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgresql
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-logs
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
