gitea/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: gitea-http
spec:
  rules:
    - host: git.MYDOMAIN.COM
      http:
        paths:
          - path: /
            backend:
              serviceName: gitea
              servicePort: 80
